--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
 		"husky": "^8.0.0",
 		"lint-staged": "^13.0.2",
 		"prettier": "2.7.1",
+		"stylelint": "^14.9.1",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-standard": "^26.0.0",
 		"typescript": "^4.6.3",
 		"vite": "^2.9.9"
 	},
