--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
 	},
 	"plugins": ["react", "@typescript-eslint"],
 	"rules": {
+		"react/jsx-uses-react": "off",
+		"react/react-in-jsx-scope": "off",
 		"import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
 		"react/jsx-filename-extension": [
 			1,
@@ -42,6 +44,7 @@
 			}
 		],
 		"no-shadow": "off",
-		"@typescript-eslint/no-shadow": ["off"]
+		"@typescript-eslint/no-shadow": ["off"],
+		"react/jsx-props-no-spreading": "off"
 	}
 }
