--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.9.3",
+		"@emotion/styled": "^11.9.3",
+		"@fontsource/roboto": "^4.5.7",
+		"@mui/material": "^5.8.4",
 		"react": "^18.0.0",
-		"react-dom": "^18.0.0"
+		"react-dom": "^18.0.0",
+		"react-hook-form": "^7.33.0",
+		"react-router-dom": "^6.3.0",
+		"react-select": "^5.3.2",
+		"zustand": "^4.0.0-rc.1"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.0.2",
@@ -20,6 +28,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
 		"@vitejs/plugin-react": "^1.3.0",
+		"autoprefixer": "^10.4.7",
 		"eslint": "^8.17.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "8.5.0",
@@ -29,10 +38,9 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"husky": "^8.0.0",
 		"lint-staged": "^13.0.2",
+		"postcss": "^8.4.14",
 		"prettier": "2.7.1",
-		"stylelint": "^14.9.1",
-		"stylelint-config-prettier": "^9.0.3",
-		"stylelint-config-standard": "^26.0.0",
+		"tailwindcss": "^3.1.4",
 		"typescript": "^4.6.3",
 		"vite": "^2.9.9"
 	},
