--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
 		"zustand": "^4.0.0-rc.1"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^17.0.2",
-		"@commitlint/config-conventional": "^17.0.2",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
 		"@vitejs/plugin-react": "^1.3.0",
 		"autoprefixer": "^10.4.7",
+		"cz-customizable": "^6.3.0",
 		"eslint": "^8.17.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "8.5.0",
@@ -49,5 +48,10 @@
 			"npx prettier --write",
 			"npx eslint --fix"
 		]
+	},
+	"config": {
+		"commitizen": {
+			"path": "node_modules/cz-customizable"
+		}
 	}
 }
